Revert "Update for current workshop"
This reverts commit 71594f36ebdfd204536dbc51fdcbc0a077da868e.

--- a/inventory/inventory_rhel7_dev.aws_ec2.yml
+++ b/inventory/inventory_rhel7_dev.aws_ec2.yml
@@ -5,8 +5,8 @@ regions:
 filters:
   tag:ContentView: RHEL7
   tag:Environment: Dev
-  tag:Student: student1
-  tag:guid: eo01
+  tag:Student: STUDENT_NAME_WITH_NUM
+  tag:guid: EC2_NAME_PREFIX
 hostnames:
   - tag:NodeName
 compose:
