--- a/roles/requirements.yml
+++ b/roles/requirements.yml
@@ -7,4 +7,4 @@
 # from GitHub, overriding the name and specifying a specific tag (master)
 - src: https://github.com/heatmiser/ansible-git
   version: master
-  name: ansible-git
+  name: ansible_git
