--- a/git_project_update.yml
+++ b/git_project_update.yml
@@ -4,7 +4,7 @@
   vars:
     # outside of yaml, actual regex looks like this ==> (?!.*\/).+
     git_repo_path: >
-      {{ git_url | regex_search('(?!.*\/).+') | regex_replace('.git', '') }}
+      {{ git_url | regex_search{'(?!.*\/).+'} | regex_replace('.git', '') }}
   tasks:
 #================================
   - name: Create temporary directory
