--- a/git_project_update.yml
+++ b/git_project_update.yml
@@ -3,8 +3,8 @@
   become: true
   vars:
     # outside of yaml, actual regex looks like this ==> (?!.*\/).+
-    git_repo_path: |
-      {{ git_url | regex_search('(?!.*\\/).+') | regex_replace('.git', '') }}
+    git_repo_path: >
+      {{ git_repo_url | regex_search('(?!.*\/).+') | regex_replace('.git', '') }}
   tasks:
 #================================
   - name: Create temporary directory
