Back up to files_to_change to debug

--- a/git_project_update.yml
+++ b/git_project_update.yml
@@ -51,8 +51,11 @@
     with_items: "{{ found_directories.files }}"
     register: files_to_change
 
+  #- debug:
+  #    msg: "{{ [item.path] }} "
+  #  with_items: "{{ files_to_change.files }}"
   - debug:
-      msg: "{{ [item.path] }} "
-    with_items: "{{ files_to_change.files }}"
+      msg: "{{ [item] }} "
+    with_items: "{{ files_to_change }}"
 #================================
   run_once: yes
