Revert "results.files with item.path"
This reverts commit b468aee28a54ecc631c5c9bca13d34c6a899ffa7.

--- a/git_project_update.yml
+++ b/git_project_update.yml
@@ -55,7 +55,7 @@
   #    msg: "{{ [item.path] }} "
   #  with_items: "{{ files_to_change.files }}"
   - debug:
-      msg: "{{ [item.path] }} "
-    with_items: "{{ files_to_change.files }}"
+      msg: "{{ [item.files] }} "
+    with_items: "{{ files_to_change.results }}"
 #================================
   run_once: yes
