select "files" via selectattr

--- a/git_project_update.yml
+++ b/git_project_update.yml
@@ -52,10 +52,10 @@
     register: files_to_change
 
   #- debug:
-  #    msg: "{{ [item.path] }} "
-  #  with_items: "{{ files_to_change.files }}"
+  #    msg: "{{ [item.files] }} "
+  #  with_items: "{{ files_to_change.results  }}"
   - debug:
-      msg: "{{ [item.files] }} "
-    with_items: "{{ files_to_change.results }}"
+      msg: "{{ [item] }} "
+    with_items: "{{ files_to_change.results | selectattr('files', 'defined') | list }}"
 #================================
   run_once: yes
