--- a/git_project_update.yml
+++ b/git_project_update.yml
@@ -56,6 +56,6 @@
   #  with_items: "{{ files_to_change.results  }}"
   - debug:
       msg: "{{ [item] }} "
-    with_items: "{{ files_to_change.results | selectattr('files', 'defined') | | map(attribute='files')  list }}"
+    with_items: "{{ files_to_change.results | selectattr('files', 'defined') | map(attribute='files')  list }}"
 #================================
   run_once: yes
