--- a/git_project_update.yml
+++ b/git_project_update.yml
@@ -51,11 +51,11 @@
     with_items: "{{ found_directories.files }}"
     register: files_to_change
 
-  #- debug:
-  #    msg: "{{ [item.files] }} "
-  #  with_items: "{{ files_to_change.results  }}"
   - debug:
-      msg: "{{ item }} "
-    with_items: "{{ files_to_change.results | selectattr('files', 'defined') | map(attribute='path') }}"
+      msg: "{{ [item.files] }} "
+    with_items: "{{ files_to_change.results | sum(attribute='files', start=[]) | map(attribute='path') | list }}"
+  #- debug:
+  #    msg: "{{ item }} "
+  #  with_items: "{{ files_to_change.results | selectattr('files', 'defined') | map(attribute='path') }}"
 #================================
   run_once: yes
