--- a/git_project_update.yml
+++ b/git_project_update.yml
@@ -52,7 +52,7 @@
     register: files_to_change
 
   - debug:
-      msg: "{{ [item.files] }} "
+      msg: "{{ item }} "
     with_items: "{{ files_to_change.results | sum(attribute='files', start=[]) | map(attribute='path') | list }}"
   #- debug:
   #    msg: "{{ item }} "
