--- a/group_vars/control/inventories.yml
+++ b/group_vars/control/inventories.yml
@@ -11,8 +11,8 @@ tower_inventories:
         tags:
           ContentView: CentOS7
           Environment: Dev
-          guid: EC2_NAME_PREFIX
-          Student: STUDENT_NAME_WITH_NUM
+          guid: oe01
+          Student: student1
 
   - name: CentOS7 Production
     organization: Default
@@ -22,8 +22,8 @@ tower_inventories:
         tags:
           ContentView: CentOS7
           Environment: Prod
-          guid: EC2_NAME_PREFIX
-          Student: STUDENT_NAME_WITH_NUM
+          guid: oe01
+          Student: student1
 
   - name: RHEL7 Development
     organization: Default
@@ -32,8 +32,8 @@ tower_inventories:
         tags:
           ContentView: RHEL7
           Environment: Dev
-          guid: EC2_NAME_PREFIX
-          Student: STUDENT_NAME_WITH_NUM
+          guid: oe01
+          Student: student1
 
   - name: RHEL7 Production
     organization: Default
@@ -42,8 +42,8 @@ tower_inventories:
         tags:
           ContentView: RHEL7
           Environment: Prod
-          guid: EC2_NAME_PREFIX
-          Student: STUDENT_NAME_WITH_NUM
+          guid: oe01
+          Student: student1
 
   - name: ALL Development
     organization: Default
@@ -69,12 +69,12 @@ tower_inventory_sources:
     source: ec2
     source_vars:
       regions:
-        - us-east-1
+        - us-east-2
       filters:
         tag:ContentView: CentOS7
         tag:Environment: Dev
-        tag:Student: STUDENT_NAME_WITH_NUM
-        tag:guid: EC2_NAME_PREFIX
+        tag:Student: student1
+        tag:guid: oe01
       hostnames:
         - tag:NodeName
       keyed_groups:
@@ -99,12 +99,12 @@ tower_inventory_sources:
     source: ec2
     source_vars:
       regions:
-        - us-east-1
+        - us-east-2
       filters:
         tag:ContentView: CentOS7
         tag:Environment: Prod
-        tag:Student: STUDENT_NAME_WITH_NUM
-        tag:guid: EC2_NAME_PREFIX
+        tag:Student: student1
+        tag:guid: oe01
       hostnames:
         - tag:NodeName
         - tag:Name
@@ -131,12 +131,12 @@ tower_inventory_sources:
     source: ec2
     source_vars:
       regions:
-        - us-east-1
+        - us-east-2
       filters:
         tag:ContentView: RHEL7
         tag:Environment: Dev
-        tag:Student: STUDENT_NAME_WITH_NUM
-        tag:guid: EC2_NAME_PREFIX
+        tag:Student: student1
+        tag:guid: oe01
       hostnames:
         - tag:NodeName
       keyed_groups:
@@ -160,12 +160,12 @@ tower_inventory_sources:
     source: ec2
     source_vars:
       regions:
-        - us-east-1
+        - us-east-2
       filters:
         tag:ContentView: RHEL7
         tag:Environment: Prod
-        tag:Student: STUDENT_NAME_WITH_NUM
-        tag:guid: EC2_NAME_PREFIX
+        tag:Student: student1
+        tag:guid: oe01
       hostnames:
         - tag:NodeName
         - tag:Name
