--- a/inventory/inventory_centos7_dev.aws_ec2.yml
+++ b/inventory/inventory_centos7_dev.aws_ec2.yml
@@ -1,12 +1,12 @@
 ---
 plugin: aws_ec2
 regions:
-  - us-east-1
+  - us-east-2
 filters:
   tag:ContentView: CentOS7
   tag:Environment: Dev
-  tag:Student: STUDENT_NAME_WITH_NUM
-  tag:guid: EC2_NAME_PREFIX
+  tag:Student: student1
+  tag:guid: oe01
 hostnames:
   - tag:NodeName
 compose:
